# diffy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  stop.sh
plugin/skills/review-diff/: SKILL.md
plugin/skills/validate-changes/: SKILL.md
plugins/claude-code-diffy/.claude-plugin/: plugin.json
plugins/claude-code-diffy/commands/: help.md  setup.md
plugins/claude-code-diffy/hooks/: hooks.json
plugins/claude-code-diffy/skills/review-diff/: SKILL.md
plugins/claude-code-diffy/skills/validate-changes/: SKILL.md
specs/: architecture.md  claude-integration.md  data-model.md  idea.md  roadmap.md  safety-strategy.md  tui-design.md
src/: cli.rs  config.rs  git.rs  hook.rs  lib.rs  main.rs  model.rs  output.rs  parse.rs  revert.rs  tty.rs
src/tui/: highlight.rs  input.rs  mod.rs  render.rs  state.rs
tests/: integration.rs
