[package]
name = "diffy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
libc = "0.2.181"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1"
